# fbthrift

./: .gitignore  CMakeLists.txt  PHASE_5_PLAN.md  PythonPackage.cmake  README.md  ThriftLibrary.cmake
.claude/: settings.local.json
.devcontainer/: Containerfile
.github/workflows/: cache_inspector.yml  getdeps_linux.yml  getdeps_linux_python.yml  getdeps_mac.yml  getdeps_python_linux.yml  getdeps_python_linux_container.yml  getdeps_windows.yml
thrift/: CMakeLists.txt
thrift/compiler/: CMakeLists.txt
thrift/compiler/lib/: reserved_identifier_name.h
thrift/example/: CMakeLists.txt
thrift/example/cpp2/: CMakeLists.txt
thrift/example/if/: CMakeLists.txt  sum.thrift
thrift/example/python/: CMakeLists.txt  sum.thrift  sum_types_example.py
thrift/example/python/server/: handler.py
thrift/example/python/server/tests/: test_sum_service.py
thrift/lib/: CMakeLists.txt  create_folly_symlinks.sh  setup.py
thrift/lib/cpp2/: CMakeLists.txt
thrift/lib/cpp2/transport/http2/common/: CMakeLists.txt
thrift/lib/hack/src/__tests__/: ThriftContextPropStateTest.php
thrift/lib/py3/: CMakeLists.txt  setup.py
thrift/lib/py3/test/: CMakeLists.txt
thrift/lib/python/: CMakeLists.txt  setup.py
thrift/lib/python/client/: __init__.py
thrift/lib/python/streaming/: BiDiStream.cpp  bidistream.pxd
thrift/lib/python/test/: CMakeLists.txt  adapter.py  adapter.thrift  client_server.py  serializer.py
thrift/lib/python/test/adapters/: datetime.py
thrift/lib/python/test_only/: CMakeLists.txt
